updated for exam

--- a/Revision/.project
+++ b/Revision/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SchoolManagement</name>
+	<name>Revision</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1698679315505</id>
+			<id>1698691963915</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
